<resources>
    <!--<string name="app_name">StarDust</string>-->
    <string name="app_name">TBox 工具</string>
    <string name="application">应用</string>
    <string name="okhttp_get_1">异步GET请求</string>
    <string name="okhttp_get_2">同步GET请求</string>
    <string name="okhttp_post_1">POST方式提交String</string>
    <string name="okhttp_post_2">POST方式提交流</string>
    <string name="okhttp_post_3">POST提交文件</string>
    <string name="okhttp_post_4">POST方式提交表单</string>
    <string name="okhttp_post_5">POST方式提交分块请求</string>
    <string name="okhttp_interceptor">interceptor</string>
    <string name="okhttp_response_cache">支持缓存</string>
    <string name="okhttp_cancel_call">取消请求</string>
    <string name="okhttp_timeout">超时</string>
    <string name="okhttp_per_call_configuration">每个call配置</string>
    <string name="okhttp_handling_authentication">处理身份验证</string>
    <string name="app_layout_constraintdimensionratio">app:layout_constraintDimensionRatio=\"H,16:6\"</string>
    <string name="app_layout_constrainthorizontal_weight">app:layout_constraintHorizontal_weight=\"5\"</string>
    <string name="app_layout_constraintHorizontal_chainStyle_packed">chainStyle=\"packed\"</string>
    <string name="app_layout_constraintHorizontal_chainStyle_spread_inside">chainStyle=\"spread_inside\"</string>
    <string name="app_layout_constraintHorizontal_chainStyle_spread">chainStyle=\"spread\"</string>
    <string name="app_layout_constrainthorizontal_vertical_bias">app:layout_constraintHorizontal/vertical_bias</string>
    <string name="upgrade_step_title">刷新流程操作</string>
    <string name="upgrade_step_info">1. 公网下载刷新文件（存在刷新的文件，可忽略）\n2. 连接TBox WiFi \n3. 选择本地文件 \n4. 输入参数开始刷新 \n5. 等待刷新结果返回</string>
    <string name="upgrade_step_info_zt">1. 连接TBox WiFi \n2. 选择本地文件 \n3. 输入参数开始刷新 \n4. 等待刷新结果返回</string>
    <string name="personal_info">个人信息</string>
    <string name="about_us">关于我们</string>
    <string name="app_settings">应用设置</string>
    <string name="app_exit">退出登录</string>
    <string name="about">关于</string>
</resources>
